--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "description": "Node module for converting PDF to image based on pdf2img by Fitra Adity",
   "main": "index.js",
   "license": "MIT",
@@ -15,7 +15,11 @@
   "keywords": [
     "pdf to image",
     "pdf to jpg",
-    "pdf to png"
+    "pdf to png",
+    "pdf",
+    "image",
+    "pdf2img",
+    "pdf2image"
   ],
   "author": "Jacob Baring <jacob@dnamicro.com>",
   "dependencies": {
@@ -23,16 +27,17 @@
     "fs-extra": "^4.0.2",
     "gm": "^1.23.0"
   },
-  "engines": { 
+  "engines": {
     "node": ">=8.0.0",
     "npm": ">=5.4.2"
-  }, 
+  },
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-compile": "^2.0.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.24.0"
+    "babel-register": "^6.24.0",
+    "mocha-co": "^1.17.2"
   }
 }
