--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "url": "https://github.com/yakovmeister/pdf2image.git"
   },
   "scripts": {
-    "compile": "babel-compile -p es2015 src:lib"
+    "compile": "babel-compile -p es2015 src:lib",
+    "test": "mocha"
   },
   "keywords": [
     "pdf to image",
@@ -30,12 +31,13 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-compile": "^2.0.0",
-    "babel-polyfill": "^6.23.0",
     "babel-plugin-syntax-async-functions": "^6.1.4",
     "babel-plugin-transform-regenerator": "^6.1.4",
+    "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.24.0",
+    "mocha": "^4.0.1",
     "mocha-co": "^1.17.2"
   }
 }
