--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "babel-preset-es2015": "^6.24.0",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.24.0",
-    "istanbul": "^0.4.5",
+    "es8-polyfill": "^0.1.0",
     "mocha": "^4.0.1"
   }
 }
