--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "0.2.0",
+  "version": "1.0.0",
   "description": "Node module for converting PDF to image based on pdf2img by Fitra Adity",
   "main": "index.js",
   "license": "MIT",
@@ -10,7 +10,10 @@
     "url": "https://github.com/yakovmeister/pdf2image.git"
   },
   "scripts": {
-    "compile": "babel-compile -p es2017 -p es2015 src:lib",
+    "clean": "rm -rf ./lib && mkdir ./lib",
+    "compile:babel": "babel-compile -p es2017 -p es2015 src:lib/compiled",
+    "compile:uglify": "uglifyjs ./lib/compiled/helper.js ./lib/compiled/index.js -o ./lib/main.min.js --compress sequences=false,toplevel=true --mangle --verbose",
+    "compile": "npm run clean && npm run compile:babel",
     "test": "_mocha test"
   },
   "keywords": [
@@ -34,7 +37,9 @@
     "babel-plugin-syntax-async-functions": "^6.1.4",
     "babel-plugin-transform-regenerator": "^6.1.4",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.24.0",
     "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.24.0",
     "es8-polyfill": "^0.1.0",
     "mocha": "^4.0.1"
