--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   },
   "scripts": {
     "clean": "rm -rf ./lib && mkdir ./lib",
+    "clean:test": "rm -rf ./test/o && mkdir ./test/o",
     "clean:compile": "rm -rf ./lib/compiled",
     "compile:babel": "babel-compile -p es2017 -p es2015 src:lib/compiled",
     "compile:minify": "minify lib/compiled -d lib",
     "compile": "npm run clean && npm run compile:babel && npm run compile:minify && npm run clean:compile",
-    "test": "_mocha test"
+    "test": "npm run clean:test && _mocha test"
   },
   "keywords": [
     "pdf to image",
@@ -30,7 +31,8 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "fs-extra": "^4.0.2",
-    "gm": "^1.23.0"
+    "gm": "^1.23.0",
+    "gm-base64": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
