--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "1.0.3-beta.1",
+  "version": "1.1.0",
   "description": "Node module for converting PDF to image based on pdf2img by Fitra Adity",
   "main": "index.js",
   "license": "MIT",
@@ -25,9 +25,10 @@
     "pdf",
     "image",
     "pdf2img",
-    "pdf2image"
+    "pdf2image",
+    "gm"
   ],
-  "author": "Jacob Baring <jacob@dnamicro.com>",
+  "author": "Jacob Baring <owari@waifu.club>",
   "dependencies": {
     "bluebird": "^3.5.1",
     "fs-extra": "^4.0.2",
