--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "Node module for converting PDF to image based on pdf2img by Fitra Adity",
   "main": "index.js",
   "license": "MIT",
@@ -30,6 +30,7 @@
   ],
   "author": "Jacob Baring <owari@waifu.club>",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^4.0.2",
     "gm": "^1.23.0",
