--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "url": "https://github.com/yakovmeister/pdf2image.git"
   },
   "scripts": {
+    "postinstall": "npm run compile",
     "clean": "rm -rf ./lib && mkdir ./lib",
     "clean:test": "rm -rf ./test/o && mkdir ./test/o",
     "clean:compile": "rm -rf ./lib/compiled",
