--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "clean": "rm -rf ./lib && mkdir ./lib",
     "clean:test": "rm -rf ./test/o && mkdir ./test/o",
     "clean:compile": "rm -rf ./lib/compiled",
-    "compile:babel": "babel-compile -p es2017 -p es2015 src:lib/compiled",
+    "compile:babel": "babel-compile -p env src:lib/compiled",
     "compile:minify": "minify lib/compiled -d lib",
     "compile": "npm run clean && npm run compile:babel && npm run compile:minify && npm run clean:compile",
     "test": "npm run clean:test && _mocha test"
@@ -41,12 +41,9 @@
   "devDependencies": {
     "babel-cli": "^6.24.0",
     "babel-compile": "^2.0.0",
+    "babel-core": "^6.26.0",
     "babel-minify": "^0.2.0",
-    "babel-plugin-syntax-async-functions": "^6.1.4",
-    "babel-plugin-transform-regenerator": "^6.1.4",
-    "babel-preset-es2015": "^6.24.0",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-stage-2": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-register": "^6.24.0",
     "mocha": "^4.0.1"
   }
