--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+      sudo: required
+    - os: osx
+      osx_image: xcode9.2
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install graphicsmagick
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gs graphicsmagick; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; sudo apt-get install graphicsmagick; fi
 install:
   - npm install
   - npm run compile
