--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ matrix:
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gs graphicsmagick; fi
-  - elsif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
-  - elsif [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install graphicsmagick; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install graphicsmagick; fi
 install:
   - npm install
   - npm run compile
