--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
   ],
   "author": "Jacob Baring <owari@waifu.club>",
   "dependencies": {
-    "babel-polyfill": "^6.23.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^4.0.2",
     "gm": "^1.23.0",
-    "gm-base64": "^1.1.1",
-    "private-props": "^0.1.1"
+    "gm-base64": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
@@ -47,7 +45,11 @@
     "babel-core": "^6.26.0",
     "babel-minify": "^0.2.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.0",
+    "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "rimraf": "^2.6.1"
   }
