--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "1.1.7",
+  "version": "1.2.0",
   "description": "Node module for converting PDF to image based on pdf2img by Fitra Adity",
   "main": "index.js",
   "license": "MIT",
@@ -13,7 +13,7 @@
     "clean": "rimraf ./lib && mkdir lib",
     "clean:test": "rimraf ./test/output && mkdir test/output",
     "clean:compile": "rimraf ./lib/compiled",
-    "compile:babel": "babel-compile -p env src:lib/compiled",
+    "compile:babel": "babel-compile -p env -p stage-0 -p stage-1 -p stage-2 src:lib/compiled",
     "compile:minify": "minify lib/compiled -d lib",
     "compile": "npm run clean && npm run compile:babel && npm run compile:minify && npm run clean:compile",
     "test": "npm run clean:test && _mocha test --require babel-polyfill --require babel-register"
@@ -50,7 +50,7 @@
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.24.0",
     "chai": "^4.1.2",
-    "mocha": "^4.0.1",
+    "mocha": "^4.1.0",
     "rimraf": "^2.6.1"
   }
 }
