--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "babel-compile": "^2.0.0",
     "babel-core": "^6.26.0",
     "babel-minify": "^0.2.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
