--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,21 @@
 {
   "presets": [
-    "env",
-    "stage-0",
-    "stage-1",
-    "stage-2"
+    [
+      "@babel/preset-env",
+      { 
+        "modules": false 
+      }
+    ]
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties",
+    ["module-resolver", {
+      "root": ["./"],
+      "alias": {
+        "@utils": "./src/utils",
+        "@exceptions": "./src/errors",
+        "@spies": "./src/spies"
+      }
+    }]
   ]
 }
