--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,8 @@
 {
   "presets": [
-    "env",
-    "stage-0",
-    "stage-1",
-    "stage-2"
+    "@babel/preset-env"
+  ],
+  "plugins": [
+    "@babel/plugin-proposal-class-properties"
   ]
 }
