--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "1.2.6",
+  "version": "1.3.0",
   "description": "A utility for converting pdf to image and base64 format.",
   "main": "index.js",
   "license": "MIT",
@@ -15,8 +15,9 @@
     "clean:compile": "rimraf ./lib/compiled",
     "compile:babel": "babel-compile -p env -p stage-0 -p stage-1 -p stage-2 src:lib/compiled",
     "compile:minify": "minify lib/compiled -d lib",
-    "compile": "npm run clean && npm run compile:babel && npm run compile:minify && npm run clean:compile",
-    "test": "npm run clean:test && _mocha test --require babel-polyfill --require babel-register"
+    "compile:rollup": "rollup -c",
+    "compile": "npm run clean && npm run compile:rollup && npm run clean:compile",
+    "test": "npm run clean:test && mocha --require @babel/register"
   },
   "keywords": [
     "pdf-to-image",
@@ -34,28 +35,32 @@
   ],
   "author": "Jacob Baring <owari@waifu.club>",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "bluebird": "^3.5.1",
     "fs-extra": "^4.0.2",
     "gm": "^1.23.0",
     "gm-base64": "^1.1.1"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-compile": "^2.0.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.2",
-    "babel-minify": "^0.2.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-register": "^6.24.0",
+    "@babel/cli": "^7.0.0-beta.53",
+    "@babel/core": "^7.0.0-beta.53",
+    "@babel/plugin-external-helpers": "^7.0.0-beta.53",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.0.0-beta.53",
+    "@babel/preset-stage-3": "^7.0.0-beta.53",
+    "@babel/register": "^7.0.0",
+    "babel-plugin-module-resolver": "^3.1.1",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.10.0",
     "eslint-plugin-babel": "^5.0.0",
+    "eslint-plugin-import": "^2.10.0",
     "mocha": "^4.1.0",
-    "rimraf": "^2.6.1"
+    "rimraf": "^2.6.1",
+    "rollup": "^1.1.2",
+    "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-babel": "^4.0.0-beta.7",
+    "rollup-plugin-commonjs": "^9.1.3",
+    "rollup-plugin-json": "^3.0.0",
+    "rollup-plugin-uglify": "^6.0.2"
   }
 }
