--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,11 @@
     "@babel/preset-env"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties"
+    "@babel/plugin-transform-runtime",
+    "@babel/plugin-proposal-class-properties",
+    "@babel/plugin-proposal-object-rest-spread"
+  ],
+  "ignore": [
+    "./node_modules"
   ]
 }
