--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "1.3.2",
+  "version": "1.3.3",
   "description": "A utility for converting pdf to image and base64 format.",
   "main": "index.js",
   "license": "MIT",
@@ -35,32 +35,31 @@
   ],
   "author": "Jacob Baring <owari@waifu.club>",
   "dependencies": {
-    "@babel/polyfill": "^7.2.5",
+    "@babel/runtime": "^7.4.4",
     "bluebird": "^3.5.1",
     "fs-extra": "^4.0.2",
     "gm": "^1.23.0",
     "gm-base64": "^1.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.0.0-beta.53",
-    "@babel/core": "^7.0.0-beta.53",
-    "@babel/plugin-external-helpers": "^7.0.0-beta.53",
-    "@babel/plugin-proposal-class-properties": "^7.0.0",
-    "@babel/preset-env": "^7.0.0-beta.53",
-    "@babel/preset-stage-3": "^7.0.0-beta.53",
-    "@babel/register": "^7.0.0",
-    "babel-plugin-module-resolver": "^3.1.1",
-    "chai": "^4.1.2",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "@babel/register": "^7.4.4",
+    "babel-eslint": "^10.0.1",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "chai": "^4.2.0",
     "eslint": "^4.19.1",
-    "eslint-plugin-babel": "^5.0.0",
-    "eslint-plugin-import": "^2.10.0",
+    "eslint-plugin-babel": "^5.3.0",
+    "eslint-plugin-import": "^2.17.2",
     "mocha": "^4.1.0",
     "rimraf": "^2.6.1",
     "rollup": "^1.1.2",
-    "rollup-plugin-alias": "^1.5.1",
     "rollup-plugin-babel": "^4.0.0-beta.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-json": "^3.0.0",
     "rollup-plugin-uglify": "^6.0.2"
   }
 }
