--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ matrix:
       sudo: required
     - os: osx
       osx_image: xcode9.2
+    - os: windows
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gs graphicsmagick; fi
