--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,11 @@ matrix:
       sudo: required
     - os: osx
       osx_image: xcode9.2
-    - os: windows
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gs graphicsmagick; fi
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install graphicsmagick; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install gs graphicsmagick; fi
 install:
   - npm install
   - npm run compile
