--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "1.3.13",
+  "version": "1.4.0",
   "types": "index.d.ts",
   "description": "A utility for converting pdf to image and base64 format.",
   "main": "index.js",
@@ -10,6 +10,10 @@
     "type": "git",
     "url": "https://github.com/yakovmeister/pdf2image.git"
   },
+  "funding": {
+		"type": "paypal",
+		"url": "https://www.paypal.me/yakovmeister"
+	},
   "scripts": {
     "clean": "rimraf ./lib && mkdir lib",
     "clean:test": "rimraf ./test/output && mkdir test/output",
@@ -44,8 +48,8 @@
     "@babel/core": "^7.8.7",
     "@babel/plugin-external-helpers": "^7.8.3",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.9.5",
+    "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/preset-env": "^7.8.7",
     "@babel/register": "^7.8.6",
     "babel-eslint": "^10.1.0",
@@ -53,11 +57,11 @@
     "chai": "^4.2.0",
     "eslint": "^6.6.0",
     "eslint-plugin-babel": "^5.3.0",
-    "eslint-plugin-import": "^2.20.1",
-    "mocha": "^6.2.2",
+    "eslint-plugin-import": "^2.20.2",
+    "mocha": "^6.2.3",
     "rimraf": "^3.0.2",
     "rollup": "^2.0.0",
-    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-uglify": "^6.0.4"
   }
 }
