--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,23 @@ matrix:
     - os: linux
       dist: trusty
       sudo: required
-    - os: osx
-      osx_image: xcode9.2
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gs graphicsmagick; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install ghostscript; fi
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install graphicsmagick; fi
+  - sudo apt-get update
+  - sudo apt-get install ghostscript
+  - sudo apt-get install graphicsmagick
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
+  - npm i -g codecov
+  - npm i -g npm@latest
 install:
   - npm install
-  - npm run compile
+  - npm run test
+after_success:
+  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - nyc report --reporter=text-lcov > coverage.lcov && codecov
+git:
+  depth: false
 language: node_js
 node_js:
   - "node"
