--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "gm": "^1.23.1",
     "gm-base64": "^1.1.1"
   },
+  "engines": {
+    "node": ">= 12.0.0"
+  },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-sucrase": "^3.1.0",
