--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "2.0.0",
   "description": "A utility for converting pdf to image and base64 format.",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "dependencies": {
     "fs-extra": "^9.0.1",
     "gm": "^1.23.1",
@@ -11,10 +12,12 @@
   "engines": {
     "node": ">= 12.0.0"
   },
+  "directories": {
+    "test": "test"
+  },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-sucrase": "^3.1.0",
-    "@rollup/plugin-typescript": "^5.0.2",
     "@types/chai": "^4.2.12",
     "@types/chai-as-promised": "^7.1.3",
     "@types/fs-extra": "^9.0.1",
@@ -36,6 +39,7 @@
     "rimraf": "^3.0.2",
     "rollup": "^2.26.11",
     "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.27.2",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.1",
