chore: update travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,14 @@ matrix:
   include:
     - os: linux
       dist: trusty
-      sudo: required
 language: node_js
 node_js:
   - "node"
   - "lts/*"
 before_install:
-  - apt-get update
-  - apt-get install ghostscript
-  - apt-get install graphicsmagick
+  - sudo apt-get update
+  - sudo apt-get install ghostscript
+  - sudo apt-get install graphicsmagick
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
