--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "gm": "^1.23.1",
     "gm-base64": "^1.1.1"
   },
-  "engines": {
-    "node": ">= 12.0.0"
-  },
   "directories": {
     "test": "test"
   },
@@ -38,14 +35,14 @@
     "rollup": "^2.26.11",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.27.2",
-    "ts-node": "^8.10.2",
+    "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tslib": "^2.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "mocha": "./node_modules/.bin/mocha test/**/*.test.ts",
-    "test": "npm run lint && nyc npm run mocha",
+    "test": "npm run lint && nyc npm run mocha --reporter=lcov",
     "rollup": "rollup -c",
     "clean": "rimraf ./dist",
     "lint": "./node_modules/.bin/eslint . --ext .ts",
