--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@typescript-eslint/parser": "^4.1.0",
     "chai": "^4.2.0",
     "eslint": "^7.8.1",
+    "looks-same": "^7.2.3",
     "mocha": "^8.1.3",
     "nyc": "^15.1.0",
     "pixelmatch": "^5.2.1",
