--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "mocha": "./node_modules/.bin/mocha test/**/*.test.ts",
+    "mocha": "mocha test/**/*.test.ts",
     "test": "npm run lint && nyc --reporter=lcov npm run mocha",
     "test:text": "npm run lint && nyc --reporter=text npm run mocha",
     "rollup": "rollup -c",
