--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "mocha": "mocha test/**/*.test.ts",
     "test": "npm run lint && nyc --reporter=lcov npm run mocha",
     "test:text": "npm run lint && nyc --reporter=text npm run mocha",
+    "test:watch": "npm run mocha -- --watch",
     "rollup": "rollup -c",
     "clean": "rimraf ./dist",
     "lint": "eslint . --ext .ts",
