--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -13,6 +13,9 @@ jobs:
         with:
           node-version: '14.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: |
+          sudo apt-get update
+          sudo apt-get install -y graphicsmagick ghostscript
       - run: npm install
       - run: npm run build
       - run: npm publish
