--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,8 +11,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '14.x'
-          registry-url: 'https://registry.npmjs.org'
+          node-version: 16.x
+          registry-url: https://registry.npmjs.org
       - run: |
           sudo apt-get update
           sudo apt-get install -y graphicsmagick ghostscript
