--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
   "name": "pdf2pic",
   "version": "2.2.4",
-  "description": "A utility for converting pdf to image and base64 format.",
+  "description": "A utility for converting pdf to image formats. Supports different outputs: directly to file, base64 or buffer.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "gm": "^1.23.1"
+    "gm": "^1.25.0"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.2",
-    "@types/chai": "^4.2.14",
-    "@types/gm": "^1.18.9",
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^15.0.0",
-    "@types/rimraf": "^3.0.0",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
-    "chai": "^4.3.0",
-    "eslint": "^7.19.0",
-    "mocha": "^9.0.0",
+    "@rollup/plugin-alias": "^4.0.4",
+    "@rollup/plugin-terser": "^0.4.3",
+    "@rollup/plugin-typescript": "^11.1.2",
+    "@types/chai": "^4.3.5",
+    "@types/gm": "^1.25.1",
+    "@types/mocha": "^10.0.1",
+    "@types/node": "^16.18.39",
+    "@types/rimraf": "^4.0.5",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
+    "chai": "^4.3.7",
+    "eslint": "^8.46.0",
+    "mocha": "^10.2.0",
     "nyc": "^15.1.0",
-    "rimraf": "^3.0.2",
-    "rollup": "^2.38.5",
-    "rollup-plugin-terser": "^7.0.2",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "^3.9.0",
-    "tslib": "^2.1.0",
-    "typescript": "^4.1.3"
+    "rimraf": "^5.0.1",
+    "rollup": "^3.27.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
+    "tslib": "^2.6.1",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "mocha": "mocha test/**/*.test.ts",
-    "test": "npm run lint && nyc --reporter=lcov npm run mocha",
-    "test:text": "npm run lint && nyc --reporter=text npm run mocha",
+    "test": "nyc --reporter=lcov npm run mocha",
+    "test:text": "nyc --reporter=text npm run mocha",
     "test:watch": "npm run mocha -- --watch",
     "rollup": "rollup -c",
     "clean": "rimraf ./dist",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint --ext .ts .",
     "build": "npm run test && npm run clean && npm run rollup"
+  },
+  "engines": {
+    "node": ">=14"
   },
   "repository": {
     "type": "git",
