--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.46.0",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
+    "prettier": "^3.1.1",
     "rimraf": "^5.0.1",
     "rollup": "^3.27.2",
     "ts-node": "^10.9.1",
