--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pdf2pic",
-  "version": "3.1.2",
+  "version": "3.1.1",
   "description": "A utility for converting pdf to image formats. Supports different outputs: directly to file, base64 or buffer.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -14,7 +14,7 @@
     "@types/chai": "^4.3.5",
     "@types/gm": "^1.25.1",
     "@types/mocha": "^10.0.1",
-    "@types/node": "^18.19.50",
+    "@types/node": "^16.18.39",
     "@types/rimraf": "^4.0.5",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
@@ -44,7 +44,7 @@
     "prepare": "husky install"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=14"
   },
   "repository": {
     "type": "git",
@@ -78,9 +78,6 @@
   },
   "homepage": "https://github.com/yakovmeister/pdf2image#readme",
   "lint-staged": {
-    "*.{js,ts}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+    "*.{js,ts}": ["prettier --write", "eslint --fix"]
   }
 }
